Creating a new scene with a full copy doesn't work ( objects are instanced ) #57361

Closed
opened 2018-10-23 16:29:24 +02:00 by Mal Duffin · 8 comments
Member

System Information
Windows 10, GTX1070

Blender Version
Broken: 2.8 Alpha 2,
Worked: 2.79

Short description of error
When making a full copy of a scene, the objects aren't unique

Exact steps for others to reproduce the error

  1. Restart Blender
  2. Create a new scene with "Full Copy"
  3. Edit the ( should be unique ) cube ( in either scene )
  4. Load up the other scene, the object has also been edited.
**System Information** Windows 10, GTX1070 **Blender Version** Broken: 2.8 Alpha 2, Worked: 2.79 **Short description of error** When making a full copy of a scene, the objects aren't unique **Exact steps for others to reproduce the error** 1) Restart Blender 2) Create a new scene with "Full Copy" 3) Edit the ( should be unique ) cube ( in either scene ) 4) Load up the other scene, the object has also been edited.
Author
Member

Added subscriber: @MalDuffin

Added subscriber: @MalDuffin
Bastien Montagne self-assigned this 2018-10-24 08:19:37 +02:00

Hehe, full scene copying was actually marked as TODO… tsst…

Hehe, full scene copying was actually marked as TODO… tsst…
Author
Member

If you can give me a few pointers as to where to look, I can have a look at fixing it myself and hopefully submitting a patch. I recently downloaded and compiled the sources and can now debug with Visual Studio, if you're OK with sharing some of your knowledge of this area, I'll try to use that to fix the issue.

If you can give me a few pointers as to where to look, I can have a look at fixing it myself and hopefully submitting a patch. I recently downloaded and compiled the sources and can now debug with Visual Studio, if you're OK with sharing some of your knowledge of this area, I'll try to use that to fix the issue.

TBH, I would really, like really not recommend that area to start working in Blender… Already spent over two hours on that one, and am still far from done…

TBH, I would really, like really not recommend that area to start working in Blender… Already spent over two hours on that one, and am still far from done…

This issue was referenced by a211937892

This issue was referenced by a211937892f55ac9510e0f9b625c1bd24cc12550

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Hi Bastien, if you make a full copy of the scene and then delete the scene, it works fine.

However, if you make a full copy of the scene, then make a full copy of that scene, and then delete that scene, Blender will crash.

It seems to be similar to a previously fixed bug, where the child had a null collection when calling layer_collection_sync

Hi Bastien, if you make a full copy of the scene and then delete the scene, it works fine. However, if you make a full copy of the scene, then make a full copy of that scene, and then delete that scene, Blender will crash. It seems to be similar to a previously fixed bug, where the child had a null collection when calling layer_collection_sync

Indeed, will make new report to keep track of that, thanks

Indeed, will make new report to keep track of that, thanks
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57361
No description provided.